# SDL2XInput

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  config.example.toml
.github/workflows/: release.yml
src/: app.rs  config.rs  keys.rs  main.rs  mapping.rs  session.rs  viiper_bridge.rs
