[package]
name = "sdl2xinput"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl3-sys = { version = "0.6.3+SDL-3.4.4", features = ["build-from-source", "debug-impls"] }
sdl3 = { version = "0.18.0", features = ["hidapi"] }
viiper-client = { version = "0.6.0", features = ["async"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde_json = "1.0.149"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tray-item = "0.10.0"
windows-sys = { version = "0.61.2", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
winres = "0.1.12"
